adding modified files

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 
       <section class="header-container clearfix">
         <div class="header-title">
-          <h1>Galass</h1>
-          <h1>Handbags</h1>
+          <h1>Galass <span>Handbags</span></h1>
         </div>
         <div class="header-image">
-          <img src="images/group-bags.png"
-            alt="Close up of woman wearing a black sweater holding a black purse and cellphone">
+          <div class="section1-image">
+            <img src="images/group-bags.png"
+              alt="Close up of woman wearing a black sweater holding a black purse and cellphone">
+          </div>
         </div>
       </section>
       <section class="section1-icons clearfix">
@@ -58,14 +59,16 @@
             alt="Close up of woman wearing a black sweater holding a black purse and cellphone">
         </div>
         <div class="section-content">
-          <h2>Hand crafted</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime dolores molestiae illo possimus non
-            ullam, fuga magni repellendus officiis minima cumque maiores suscipit mollitia labore nam assumenda quod,
-            rerum cum distinctio quisquam! Voluptatibus, error nisi fuga in modi veniam ducimus provident. Explicabo
-            ducimus nobis debitis repudiandae eius dolorem accusantium vitae, itaque sint excepturi provident aliquam
-            at voluptas consequatur soluta quasi. Corrupti excepturi nihil necessitatibus aperiam perferendis
-            repudiandae, at, molestias laudantium facilis sapiente cumque amet beatae!</p>
-          <button>read more</button>
+          <div class="section-container">
+            <h2>Hand crafted</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime dolores molestiae illo possimus non
+              ullam, fuga magni repellendus officiis minima cumque maiores suscipit mollitia labore nam assumenda quod,
+              rerum cum distinctio quisquam! Voluptatibus, error nisi fuga in modi veniam ducimus provident. Explicabo
+              ducimus nobis debitis repudiandae eius dolorem accusantium vitae, itaque sint excepturi provident aliquam
+              at voluptas consequatur soluta quasi. Corrupti excepturi nihil necessitatibus aperiam perferendis
+              repudiandae, at, molestias laudantium facilis sapiente cumque amet beatae!</p>
+            <button>read more</button>
+          </div>
         </div>
       </div>
     </section>
