--- a/index.html
+++ b/index.html
@@ -125,13 +125,15 @@
     </section>
     <section class="section4 clearfix">
       <div class="fall-trends-container">
-        <h2>Fall Trends</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem quas laudantium totam similique!
-          Dicta ipsa inventore dolores tempore placeat veritatis quas ullam eos nisi qui, molestiae voluptas
-          dolorum
-          commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
-          officia temporibus impedit esse assumenda labore eos provident!</p>
-        <button>read more</button>
+        <div class="fall-trends-inner-container">
+          <h2>Fall Trends</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem quas laudantium totam similique!
+            Dicta ipsa inventore dolores tempore placeat veritatis quas ullam eos nisi qui, molestiae voluptas
+            dolorum
+            commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
+            officia temporibus impedit esse assumenda labore eos provident!</p>
+          <button>read more</button>
+        </div>
       </div>
       <div class="fall-trends-image-container">
         <img src="images/right-photo.jpg"
@@ -139,7 +141,7 @@
       </div>
     </section>
 
-    <section class="section5 clearfix">
+    <!-- <section class="section5 clearfix">
       <div class="vegan-leather-container">
         <h2>Vegan Leather</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem quas laudantium totam similique!
@@ -152,7 +154,7 @@
       <div class="vegan-leather-image-container">
         <img src="images/left-photo.jpg" alt="Close up of woman wearing a blue jeans with a orange ba">
       </div>
-    </section>
+    </section> -->
     <!-- <section class="section5 clearfix">
       <div class="wrapper">
         <div class="vegan-leather">
