--- a/index.html
+++ b/index.html
@@ -141,20 +141,22 @@
       </div>
     </section>
 
-    <!-- <section class="section5 clearfix">
+    <section class="section5 clearfix">
       <div class="vegan-leather-container">
-        <h2>Vegan Leather</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem quas laudantium totam similique!
-          Dicta ipsa inventore dolores tempore placeat veritatis quas ullam eos nisi qui, molestiae voluptas
-          dolorum
-          commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
-          officia temporibus impedit esse assumenda labore eos provident!</p>
-        <button>read more</button>
+        <vegan-leather-inner-container>
+          <h2>Vegan Leather</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem quas laudantium totam similique!
+            Dicta ipsa inventore dolores tempore placeat veritatis quas ullam eos nisi qui, molestiae voluptas
+            dolorum
+            commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
+            officia temporibus impedit esse assumenda labore eos provident!</p>
+          <button>read more</button>
+        </vegan-leather-inner-container>
       </div>
       <div class="vegan-leather-image-container">
         <img src="images/left-photo.jpg" alt="Close up of woman wearing a blue jeans with a orange ba">
       </div>
-    </section> -->
+    </section>
     <!-- <section class="section5 clearfix">
       <div class="wrapper">
         <div class="vegan-leather">
