--- a/index.html
+++ b/index.html
@@ -94,16 +94,19 @@
       </div>
     </section> -->
     <section class="section2 clearfix">
-      <h2>latest collection</h2>
+      <h2>Latest collection</h2>
       <div class="wrapper2">
         <div class="section2-image-container clearfix">
-          <li><img class="image1" src="images/gallery-photo-1.jpg" alt="Close up of woman holding a black purse"
-              class="image-container"></li>
-          <li><img class="image2" src="images/gallery-photo-2.jpg" alt="Close up of woman holding a brown leather bag"
-              class="image-container"></li>
-          <li><img class="image3" src="images/gallery-photo-3.jpg"
-              alt="Close up of a white purse with sun glasses to the left on top of a gray ledge"
-              class="image-container"></li>
+          <ul class="clearfix">
+
+            <li><img class="image1" src="images/gallery-photo-1.jpg" alt="Close up of woman holding a black purse"
+                class="image-container"></li>
+            <li><img class="image2" src="images/gallery-photo-2.jpg" alt="Close up of woman holding a brown leather bag"
+                class="image-container"></li>
+            <li><img class="image3" src="images/gallery-photo-3.jpg"
+                alt="Close up of a white purse with sun glasses to the left on top of a gray ledge"
+                class="image-container"></li>
+          </ul>
         </div>
       </div>
     </section>
@@ -132,7 +135,9 @@
             dolorum
             commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
             officia temporibus impedit esse assumenda labore eos provident!</p>
-          <button>read more</button>
+          <button>
+            <p>read more</p>
+          </button>
         </div>
       </div>
       <div class="fall-trends-image-container">
@@ -150,7 +155,9 @@
             dolorum
             commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
             officia temporibus impedit esse assumenda labore eos provident!</p>
-          <button>read more</button>
+          <button>
+            <p>read more</p>
+          </button>
           </vegan-leather-inner-container>
         </div>
       </div>
@@ -183,7 +190,7 @@
       <div class="wrapper clearfix">
         <div class="footer-section-container clearfix">
           <div class="footer-links">
-            <ul>
+            <ul class="clearfix">
               <li><a href="#">home</a></li>
               <li><a href="#">blog</a></li>
               <li><a href="#">gallery</a></li>
