--- a/index.html
+++ b/index.html
@@ -165,24 +165,7 @@
         <img src="images/left-photo.jpg" alt="Close up of woman wearing a blue jeans with a orange bag">
       </div>
     </section>
-    <!-- <section class="section5 clearfix">
-      <div class="wrapper">
-        <div class="vegan-leather">
-          <h2>Vegan Leather</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem quas laudantium totam similique!
-            Dicta ipsa inventore dolores tempore placeat veritatis quas ullam eos nisi qui, molestiae voluptas
-            dolorum
-            commodi fugit voluptatibus minima debitis, modi animi maiores aspernatur corrupti temporibus? Animi nam
-            officia temporibus impedit esse assumenda labore eos provident!</p>
-          <button>read more</button>
-        </div>
-      </div>
-      <div class="section5-two clearfix">
-        <div class="section5-image-container">
-          <img src="images/left-photo.jpg" alt="Close up of woman wearing a blue jeans with a orange bag">
-        </div>
-      </div>
-    </section> -->
+
   </main><!-- Main section ends -->
   <!-- Footer section starts -->
   <footer>
@@ -202,6 +185,7 @@
             <p>Subscribe to our newsletter to stay updated.</p>
             <div class="subscribe-section">
               <input type="email" class="email" placeholder="email address" id="email">
+              <label for="email" class="visuallyHidden">Enter Your Email</label>
               <span>
                 <button>
                   <p>subscribe</p>
