whitney-reid-project-1

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <header>
       <!-- Nav section starts -->
       <nav>
+        <!-- Using spans as the hamburger menu. -->
+        <div class="menu-toogle clearfix">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
